--- a/main.css
+++ b/main.css
@@ -22,6 +22,10 @@ body {
   padding: 4px;
 }
 
+a.border:hover {
+  background-color: #00aaff;
+}
+
 h1,
 h2 {
   font-weight: 200;
@@ -90,6 +94,12 @@ a {
 
 .footer-left {
   padding: 20px;
+}
+
+.sticky-bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .copyright {
